# spidershield

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURATION-REPORT.md  Dockerfile  MCP-SECURITY-REPORT.md  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  action.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-web.yml  scan.yml  weekly-scan.yml
docs/decisions/: banned-licenses.md
docs/internal/: 001A-full-project-audit-2026-03-13.md  004-training-findings-2026-03-09.md
docs/observations/: 001-audit-quality-evolution-2026-03-08.md  002-deep-audit-optimization-2026-03-08.md
examples/insecure-server/: server.py
examples/secure-server/: .env.example  README.md  pyproject.toml  server.py
examples/secure-server/tests/: conftest.py  test_edge_cases.py  test_error_handling.py  test_security.py  test_server.py  test_validation.py
scripts/: spidershield-hook.sh  teeshield_to_spiderrating.py
src/agentshield/scanner/: description_quality.py  license_check.py  runner.py  security_scan.py
src/spidershield/: __init__.py  __main__.py  cli.py  models.py  scoring_spec.py  server.py  spiderrating.py
src/spidershield/adapters/: __init__.py  base.py  mcp_proxy.py  standalone.py
src/spidershield/agent/: __init__.py  allowlist.py  issue_codes.py  pinning.py  report.py  sarif.py  skill_scanner.py  toxic_flow.py
src/spidershield/audit/: __init__.py  logger.py  storage.py
src/spidershield/commands/: __init__.py  agent.py  audit.py  check.py  dataset.py  evaluate.py  guard.py  harden.py  policy.py  rewrite.py  scan.py
src/spidershield/dataset/: __init__.py  collector.py  db.py
src/spidershield/dlp/: __init__.py  engine.py  pii.py  prompt_injection.py  secrets.py
src/spidershield/evaluator/: runner.py
src/spidershield/guard/: __init__.py  context.py  core.py  decision.py  policy.py
src/spidershield/hardener/: runner.py
src/spidershield/rewriter/: cache.py  providers.py  quality_gate.py  runner.py
src/teeshield/: __init__.py  cli.py  models.py  server.py  spiderrating.py
tests/: conftest.py  test_adapters.py  test_agent_pinning.py  test_agent_sarif.py  test_allowlist.py  test_audit.py  test_bench_scanner.py  test_cli.py  test_cli_integration.py  test_dataset.py  test_dlp.py  test_evaluator_v2.py  test_firewall.py  test_golden_descriptions.py  test_guard_core.py  test_hardener_v2.py  test_issue_codes.py  test_llm_integration.py  test_mcp_proxy.py  test_presets.py  test_prompt_injection.py  test_public_api.py  test_rewrite_cache.py  test_rewriter.py  test_rewriter_v2.py  test_scan_runner.py  test_scanner.py  test_sdk_integration.py  test_security_patterns_edge.py  test_spiderrating.py  test_toxic_flow.py
(+28 files in other folders)
