[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spidershield"
version = "0.3.3"
description = "Security scanner and runtime guard for MCP servers -- static analysis, policy enforcement, DLP, prompt injection detection"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "SpiderShield" },
]
keywords = ["mcp", "ai-agent", "security", "tool-firewall", "runtime-security", "dlp", "prompt-injection", "guardrails", "static-analysis", "sarif"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
ai = [
    "anthropic>=0.40",
    "openai>=1.0",
    "google-generativeai>=0.5",
]
semgrep = [
    "semgrep>=1.60",
]

[project.urls]
Homepage = "https://spidershield.dev"
Repository = "https://github.com/teehooai/spidershield"
Documentation = "https://spidershield.dev/docs"
Changelog = "https://github.com/teehooai/spidershield/blob/master/CHANGELOG.md"

[project.scripts]
spidershield = "spidershield.cli:main"
spidershield-server = "spidershield.server:run"

[tool.ruff]
target-version = "py311"
line-length = 130
exclude = ["sdk_selfcheck.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E402"]

[tool.coverage.run]
source = ["spidershield"]
omit = [
    "src/spidershield/spiderrating.py",         # spiderrating formatter — integration-only
    "src/spidershield/rewriter/providers.py",    # requires API keys
    "src/spidershield/rewriter/runner.py",       # LLM API — tested via mocks in test_llm_integration
    "src/spidershield/scanner/license_check.py", # license detection — platform-dependent
    "src/spidershield/agent/fixer.py",           # agent fix flow — requires LLM + subprocess
    "src/spidershield/agent/report.py",          # agent report — requires LLM
    "src/spidershield/evaluator/runner.py",      # evaluator — requires MCP subprocess
    "src/spidershield/adapters/mcp_proxy.py",    # MCP proxy adapter — requires running server
    "src/spidershield/commands/*.py",            # CLI commands — tested via test_cli_integration
    "src/spidershield/__main__.py",              # entry point
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "if TYPE_CHECKING",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
